2012-03-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-shell-prompt-pattern): Allow "[]" style prompts.
	(Bug#11065)

2012-03-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-file-contents): Use
	progress-reporter for the whole scenario.

2012-03-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-remote-process-environment): Add "PAGER=\"\"".
	Reported by Robert Lupton the Good <rhl@astro.princeton.edu>.

2012-02-28  Thierry Volpiatto  <thierry.volpiatto@gmail.com>

        * tramp.el (tramp-file-name-for-operation): Rename `files-equal-p'
	to `file-equal-p'.

2012-02-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-inodes, tramp-devices): Initialize with 0.
	(tramp-get-inode, tramp-get-device): Use cached values.

2012-02-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-for-operation): Add `files-equal-p'
	and `file-subdir-of-p'.

	* tramp-sh.el (tramp-sh-handle-copy-directory):
	* tramp-smb.el (tramp-smb-handle-copy-directory): Add
	COPY-CONTENTS argument.

2012-02-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error-with-buffer): Suppress buffer view, if
	`tramp-message-show-message' is nil.

	* tramp-smb.el (tramp-smb-wrong-passwd-regexp): New defconst.
	(tramp-smb-maybe-open-connection): Handle wrong passwords.
	(tramp-smb-handle-rename-file): Fix spelling error.

2012-02-15  Glenn Morris  <rgm@gnu.org>

	* tramp.el (tramp-encoding-command-interactive)
	(tramp-local-end-of-line): Add missing :version tags to new
	defcustoms and defgroups.

2012-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error-with-buffer): Use `tramp-get-connection-buffer'.

	* tramp-compat.el (tramp-compat-copy-directory): Add optional
	argument COPY-CONTENTS.  It is not handled yet.

	* tramp-smb.el (tramp-smb-server-version)
	(tramp-smb-actions-with-tar): New defconst.
	(tramp-smb-action-with-tar): New defun.