@@ -1,3 +1,8 @@
+2012-03-27  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-compat.el (tramp-compat-copy-directory): Fix error in
+	condition-case syntax.
+
 2012-03-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-shell-prompt-pattern): Allow "[]" style prompts.
